--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio equipe PRIN2</title>
+    <title>Portifólio</title>
 </head>
 <body>
-    Membros: <br>
+    Membros <br>
     - Vitor
-    - Rodolpho 
-    - Vitória 
+    - Rodolpho
+    - Vitória
 </body>
 </html>
