FEAT: Add da pag fontini.html e add do link na index #7

--- a/fontini.html
+++ b/fontini.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio</title>
+    <title>Fontini</title>
 </head>
 <body>
-    Membros <br>
-    - Vitor
-    - Rodolpho
-    - Vitória
-    - <a href="fontini.html">Lucas</a>
+    <a href="index.html">Voltar</a>
+    <h1>VAI MENGÃO</h1>
 </body>
 </html>
