--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <title>Portifólio</title>
 </head>
 <body>
-    Membros <br>
-    - Vitor
-    - Rodolpho
-    - Vitória
+    <h1>Membros</h1> <br>
+    <h2> <a href="vitor.html">- Vitor </a><br>
+    - Rodolpho <br>
+    - Vitória <br>
+    - Lucas <br>
+    </h2>
+    <video controls width="250">
+        <source src="src/FDownloader.net-977833127037011-(1080p).mp4" type="video/webm" />
+        <source src="src/FDownloader.net-977833127037011-(1080p).mp4" type="video/mp4" />
+    </video>
+    <h1>CALMA CALABRESO!!!!!!!!!</h1>
 </body>
 </html>
