FEAT: Criação página vitoria.html e link na index #1

--- a/vitoria.html
+++ b/vitoria.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio</title>
+    <title>Vitória</title>
 </head>
 <body>
-    Membros 
-    - Vitor <br>
-    - Rodolpho <br>
-    - <a href="vitoria.html">Vitória</a><br>
+    <a href="index.html">Voltar</a>
 </body>
+
 </html>
